=== 0.9.17.1 (TBD)
* Upgraded to Logback 0.9.17
* Update/relax slf4j dependency to '~> 1.5.8' (tested with slf4j 1.5.8.1).
* Added Logback.config_console( :mdc => [ :key ] ) option

=== 0.9.15.2 (2009-5-8)
* Added Logback.config_console({}) convenience config method.
* Use rdoc 2.4.3 and hoe 1.12.2 for build, and general rdoc
  improvements.

=== 0.9.15.1 (2009-2-15)
* Upgraded to Logback 0.9.15
* Fixed fuzzy slf4j dependency as "~> 1.5.6.1"

=== 0.9.14.1 (2009-1-4)
* Upgraded to Logback 0.9.14

=== 0.9.13.1 (2008-12-6)
* Upgraded to Logback 0.9.13
* Updated SLF4J dependency to ~> 1.5.6
* LogbackBase -rename-> Logback

=== 0.9.11.1 (2008-11-1)
* Upgraded to Logback 0.9.11
* Updated SLF4J dependency to ~> 1.5.5

=== 0.9.9.1 (2008-10-8)
* Initial release based on Logback 0.9.9