@@ -1,4 +1,4 @@
-= logback
+= rjack-logback
 
 * http://rjack.rubyforge.org
 * http://rubyforge.org/projects/rjack
@@ -12,7 +12,7 @@ packaged in the slf4j gem.
 
 == License
 
-=== Logback Ruby
+=== rjack-logback gem
 
 Copyright (c) 2008-2009 David Kellum
 
